--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          npm install hexo-cli -g
           npm install
 
       - name: Deploy hexo
