--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -64,6 +64,4 @@ jobs:
 
       - name: Deploy hexo
         run: |
-          hexo clean
-          hexo generate 
-          hexo deploy
+          hexo deploy --generate
