--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -64,4 +64,6 @@ jobs:
 
       - name: Deploy hexo
         run: |
-          hexo deploy --generate
+          hexo clean
+          hexo generate 
+          hexo deploy
