--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -18,10 +18,10 @@ jobs:
       uses: actions/checkout@master 
       
     # from: https://github.com/actions/setup-node  
-    - name: Setup Node.js 10.x 
+    - name: Setup Node.js 10.13.0 
       uses: actions/setup-node@master
       with:
-        node-version: "10.x"
+        node-version: "10.13.0"
     
     - name: Setup Hexo Dependencies
       run: |
