--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -27,6 +27,11 @@ jobs:
       run: |
         npm install hexo-cli -g
         npm install
+        git clone --branch ${NEXT_VERSION} --depth=10 git@github.com:next-theme/hexo-theme-next.git themes/next
+        git checkout -b ${NEXT_VERSION}
+        git clone git@github.com:next-theme/theme-next-three --depth=1 themes/next/source/lib/three
+        # git clone git@github.com:next-theme/theme-next-fancybox3  --depth=1 themes/next/source/lib/fancybox
+        git clone git@github.com:next-theme/theme-next-pace --depth=1 themes/next/source/lib/pace
     
     - name: Setup Deploy Private Key
       env:
