--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -24,6 +24,8 @@ jobs:
         node-version: "12.x"
     
     - name: Setup Hexo Dependencies
+      env:
+        NEXT_VERSION: v8.0.0-rc.2
       run: |
         npm install hexo-cli -g
         npm install
