--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -31,12 +31,9 @@ jobs:
         npm install
         git config --global user.name 'Kevin031'
         git config --global user.email 'kevin019@163.com'
-        git clone --branch ${NEXT_VERSION} --depth=10 git@github.com:next-theme/hexo-theme-next.git themes/next
+        git clone --branch ${NEXT_VERSION} --depth=10 https://github.com/next-theme/hexo-theme-next.git themes/next
         git checkout -b ${NEXT_VERSION}
-        git clone git@github.com:next-theme/theme-next-three --depth=1 themes/next/source/lib/three
-        # git clone git@github.com:next-theme/theme-next-fancybox3  --depth=1 themes/next/source/lib/fancybox
-        git clone git@github.com:next-theme/theme-next-pace --depth=1 themes/next/source/lib/pace
-    
+
     - name: Setup Deploy Private Key
       env:
         HEXO_DEPLOY_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_PRI }}
