--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -25,7 +25,7 @@ jobs:
     
     - name: Setup Hexo Dependencies
       env:
-        NEXT_VERSION: v8.0.0-rc.2
+        NEXT_VERSION: v5.1.2
       run: |
         npm install hexo-cli -g
         npm install
