--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -24,14 +24,14 @@ jobs:
         node-version: "12.x"
     
     - name: Setup Hexo Dependencies
-      # env:
-        # NEXT_VERSION: v8.0.0-rc.2
+      env:
+        NEXT_VERSION: v5.1.2
       run: |
         npm install hexo-cli -g
         npm install
         # git config --global user.name 'Kevin031'
         # git config --global user.email 'kevin019@163.com'
-        # git clone --branch ${NEXT_VERSION} --depth=10 https://github.com/next-theme/hexo-theme-next.git themes/next
+        # git clone --branch ${NEXT_VERSION} --depth=10 https://github.com/iissnan/hexo-theme-next themes/next
         # git checkout -b ${NEXT_VERSION}
 
     - name: Setup Deploy Private Key
