--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "hexo": {
     "version": "3.9.0"
   },
+  "scripts": {
+    "insert-db": "node ./dbmaker/index.js"
+  },
   "dependencies": {
     "hexo": "^3.2.0",
     "hexo-deployer-git": "^0.3.1",
@@ -15,6 +18,10 @@
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "commander": "^9.0.0"
   }
 }
