--- a/.github/workflows/insert-database.yml
+++ b/.github/workflows/insert-database.yml
@@ -23,4 +23,4 @@ jobs:
         PASSWORD: ${{ secrets.PASSWORD }}
       run: |
         npm install commander mysql
-        node /dbmaker/index.js --host $HOST --user $USER --password $PASSWORD
+        npm run insert-db --host $HOST --user $USER --password $PASSWORD
