--- a/.github/workflows/insert-database.yml
+++ b/.github/workflows/insert-database.yml
@@ -13,6 +13,7 @@ jobs:
 
     - name: Setup Node.js 14.x 
       uses: actions/setup-node@master
+      uses: actions/checkout@v2
       with:
         node-version: "14.x"
     
