--- a/.github/workflows/insert-database.yml
+++ b/.github/workflows/insert-database.yml
@@ -11,9 +11,11 @@ jobs:
 
     steps:
 
+    - name: Checkout Repository master branch
+      uses: actions/checkout@master 
+
     - name: Setup Node.js 14.x 
       uses: actions/setup-node@master
-      uses: actions/checkout@v2
       with:
         node-version: "14.x"
     
@@ -24,4 +26,4 @@ jobs:
         PASSWORD: ${{ secrets.PASSWORD }}
       run: |
         npm install commander mysql
-        node ../dbmaker/index.js --host $HOST --user $USER --password $PASSWORD
+        node ./dbmaker/index.js --host $HOST --user $USER --password $PASSWORD
